--- a/index.html
+++ b/index.html
@@ -3,205 +3,18 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Golden</title>
-    <link rel="stylesheet" href="css/style.css">
+    <title>Home_JS</title>
 </head>
 
 <body>
-    <header>
-        <div class="container">
-            <div class="heading clearfix">
-                <img src="img/logo.png" alt="logo" class="logo">
-                <nav>
-                    <ul class="menu">
-                        <li>
-                            <a href="#">Home</a>
-                        </li>
-                        <li>
-                            <a href="#">Services</a>
-                        </li>
-                        <li>
-                            <a href="#">Portfolio</a>
-                        </li>
-                        <li>
-                            <a href="#">About</a>
-                        </li>
-                        <li>
-                            <a href="#">Contact</a>
-                        </li>
-                    </ul>
-                </nav>
-            </div>
-            <div class="title">
-                <div class="titles__first">
-                    Welcome To Our Studio!
-                </div>
-                <h1>
-                    It’s nice to Meet you
-                </h1>
-                <a class="button" href="#">Tell Me More</a>
-            </div>
-        </div>
-    </header>
 
-    <section id="services">
-        <div class="container">
-            <div class="title">
-                <h2>
-                    Services
-                </h2>
-                <p>
-                    Proin iaculis purus consequat sem cure.
-                </p>
-            </div>
-            <div class="services clearfix">
-                <div class="services__item">
-                    <img src="img/icon1.png" alt="Услуга">
-                    <h3>
-                        E-Commerce
-                    </h3>
-                    <p>
-                        Proin iaculis purus consequat sem cure
-                        digni ssim. Donec porttitora entum suscipit
-                        aenean rhoncus posuere odio in tincidunt.
-                    </p>
-                </div>
-                <div class="services__item">
-                    <img src="img/icon2.png" alt="Услуга">
-                    <h3>
-                        Responsive Web
-                    </h3>
-                    <p>
-                        Proin iaculis purus consequat sem cure
-                        digni ssim. Donec porttitora entum suscipit
-                        aenean rhoncus posuere odio in tincidunt.
-                    </p>
-                </div>
-                <div class="services__item">
-                    <img src="img/icon3.png" alt="Услуга">
-                    <h3>
-                        Web Security
-                    </h3>
-                    <p>
-                        Proin iaculis purus consequat sem cure
-                        digni ssim. Donec porttitora entum suscipit
-                        aenean rhoncus posuere odio in tincidunt.
-                    </p>
-                </div>
-            </div>
-        </div>
-    </section>
+    <script>
+        alert('Я – JavaScript! с html ');
 
-    <section id="portfolio">
-        <div class="container">
-            <div class="title">
-                <h2>
-                    Our portfolio
-                </h2>
-                <p>
-                    Proin iaculis purus consequat sem cure.
-                </p>
-                <div class="works clearfix">
-                    <img src="img/img1.jpg">
-                    <img src="img/img2.jpg">
-                    <img src="img/img3.jpg">
-                </div>
-            </div>
-        </div>
-    </section>
-    <section>
-        <div class="container">
-            <div class="title">
-                <h2>
-                    About Us
-                </h2>
-                <p>
-                    Proin iaculis purus consequat sem cure.
-                </p>
-            </div>
-            <div class="plan_A">
-                <div class="plan_A__info clearfix">
-                    <p class="data">
-                        July 2010
-                    </p>
-                    <p class="name">
-                        Our Humble Beginnigs
-                    </p>
-                    <p class="info">
-                        Proin iaculis purus consequat sem cure<br>
-                        digni ssim. Donec porttitora entum suscipit
-                        aenean rhoncus posuere odio in tincidunt. Proin
-                        iaculis purus consequat sem cure digni
-                        ssim. Donec porttitora entum suscipit.
-                    </p>
-                </div>
-                <img class="about_1" src="img/about1.jpg">
-            </div>
-            <div class="plan_B">
-                <div class="plan_B__info clearfix">
-                    <p class="data">
-                        January 2011
-                    </p>
-                    <p class="name">
-                        Facing Startup Battles
-                    </p>
-                    <p class="info">
-                        Proin iaculis purus consequat sem cure
-                        digni ssim. Donec porttitora entum suscipit
-                        aenean rhoncus posuere odio in tincidunt. Proin
-                        iaculis purus consequat sem cure digni
-                        ssim. Donec porttitora entum suscipit aenean
-                        rhoncus posuere odio in tincidunt.
-                    </p>
-                </div>
-                <img class="about_2" src="img/about2.jpg">
-            </div>
-            <div class="plan_C">
-                <div class="plan_C__info clearfix">
-                    <p class="data">
-                        December 2012
-                    </p>
-                    <p class="name">
-                        Enter The Dark Days
-                    </p>
-                    <p class="info">
-                        Proin iaculis purus consequat sem cure<br>
-                        digni ssim. Donec porttitora entum suscipit
-                        aenean rhoncus posuere odio in tincidunt. Proin
-                        iaculis purus consequat sem cure digni
-                        ssim. Donec porttitora entum suscipit.
-                    </p>
-                </div>
-                <img class="about_3" src="img/about3.jpg">
-            </div>
-            <div class="plan_D">
-                <div class="plan_D__info clearfix">
-                    <p class="data">
-                        January 2011
-                    </p>
-                    <p class="name">
-                        Facing Startup Battles
-                    </p>
-                    <p class="info">
-                        Proin iaculis purus consequat sem cure
-                        digni ssim. Donec porttitora entum suscipit
-                        aenean rhoncus posuere odio in tincidunt. Proin
-                        iaculis purus consequat sem cure digni
-                        ssim. Donec porttitora entum suscipit aenean
-                        rhoncus posuere odio in tincidunt.
-                    </p>
-                </div>
-                <img class="about_4" src="img/about2.jpg">
-            </div>
-        </div>
-    </section>
-    <footer>
-        <div class="container">
-            <p>
-                container
-            </p>
-        </div>
-    </footer>
+    </script>
+
+    <script src="main.js"></script>
+
 </body>
 
 </html>
